# compression

./: 2mb.csv  2mb.huff  CMakeLists.txt  compress.huff  learn  main.cpp  new.huff
LZW/: CMakeLists.txt  GIF.cpp  GIF.h  LZW  Text.cpp  Text.h  Video.cpp  Video.h  main.cpp
LZW/Text_compressed/: Harry_Potter.txt_compressed  Harry_Potter_Chinese.txt_compressed  Harry_Potter_Spain.txt_compressed
include/: huffman.h  huffmanImage.h  huffman_image.h
src/: huffman.cpp  huffmanImage.cpp  huffmanimage.cpp
